--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,31 @@
-.App {
-  text-align: center;
+#canvas_wrapper {
+  position: relative;
+  margin: 0 157px 0 105px;
+  overflow: hidden;
+  height: calc(100vh - 40px);
+}
+#canvas_wrapper canvas {
+  border: 1px solid #393939;
+  box-sizing: content-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+canvas {
+  border: 1px solid #ccc;
+  position: absolute;
+  outline: none;
+  /* disable select canvas */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  /* disable antialiasing */
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -o-crisp-edges;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
 }
