--- a/src/App.css
+++ b/src/App.css
@@ -3,29 +3,17 @@
   margin: 0 157px 0 105px;
   overflow: hidden;
   height: calc(100vh - 40px);
+  
 }
 #canvas_wrapper canvas {
   border: 1px solid #393939;
   box-sizing: content-box;
+  position: absolute;
+  outline: none;
 }
 
 canvas {
   border: 1px solid #ccc;
-  position: absolute;
   outline: none;
-  /* disable select canvas */
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  /* disable antialiasing */
-  image-rendering: optimizeSpeed;
-  image-rendering: -moz-crisp-edges;
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: -o-crisp-edges;
-  image-rendering: pixelated;
-  -ms-interpolation-mode: nearest-neighbor;
+  display: inline-block;
 }
