--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   margin: 0 157px 0 105px;
   overflow: hidden;
   height: calc(100vh - 40px);
-  
 }
 #canvas_wrapper canvas {
   border: 1px solid #393939;
@@ -16,4 +15,8 @@ canvas {
   border: 1px solid #ccc;
   outline: none;
   display: inline-block;
+}
+
+img {
+  width: 900px;
 }
